force-app/main/default/objects/SBQQ__PriceCondition__c/fields/SBQQ__Field__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Field__c</fullName>
        <description>Field on Quote Line or Product Option object that is evaluated by this condition.</description>
        <inlineHelpText>Choose the field that should contain the value you enter in the Value field.</inlineHelpText>
        <label>Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>SBQQ__SpecialPrice__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__RegularPrice__c</fullName>
                </value>
                <value>
                    <fullName>Partner_or_Distributor_Discount__c</fullName>
                </value>
                <value>
                    <fullName>Account_Revenue_Discount__c</fullName>
                </value>
                <value>
                    <fullName>Effective_Unit_Price__c</fullName>
                </value>
                <value>
                    <fullName>Deal_Type__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Type__c</fullName>
                </value>
                <value>
                    <fullName>Maintenance_Flag__c</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Status__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>